--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "homepage": "https://github.com/max-segale/portfolio#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-beautify": "^3.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2"
   }
 }
