New build process

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/max-segale/portfolio#readme",
   "devDependencies": {
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-beautify": "^3.0.0",
     "gulp-concat": "^2.6.1",
