--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   },
   "homepage": "https://github.com/max-segale/portfolio#readme",
   "devDependencies": {
+    "autoprefixer": "^9.7.5",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-beautify": "^3.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "cover 99%"
+  ]
 }
