--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/max-segale/portfolio#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "autoprefixer": "^9.7.5",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0-beta.2",
     "gulp-beautify": "^3.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^8.0.0",
