--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A portfolio of work from Max Segale.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "dev": "gulp"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/max-segale/portfolio#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "autoprefixer": "^9.8.6",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
@@ -33,7 +33,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "node-sass": "^4.14.1"
   },
   "browserslist": [
     "defaults"
